--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -3,4 +3,8 @@
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 
-@import "compass/reset";
+@import "normalize";
+
+body {
+    background: red;
+}
