--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -5,6 +5,8 @@
 
 @import "normalize";
 @import "susy";
+@import "compass/css3";
+@import "compass/css3/user-interface";
 
 [data-picture="lazy"], [data-picture="shown"] {
     @include transition(opacity 0.7s);
