Separating project directory, moving js libs to bower

--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -22,6 +22,9 @@ $column-width: 4em;
 $gutter-width: 1em;
 $grid-padding: $gutter-width;
 
+img {
+    max-width: 100%;
+}
 
 .page {
     @include container;
