--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -7,7 +7,7 @@
 @import "susy";
 
 [data-picture="lazy"], [data-picture="shown"] {
-    @include transition(opacity 0.7s);
+	display: block;
     opacity: 0;
 }
 
