--- a/app/sass/screen.scss
+++ b/app/sass/screen.scss
@@ -37,3 +37,17 @@ nav {
 p {
     @include span-columns(8,12);
 }
+.image {
+	display: inline-block;
+	height: auto;
+	
+	span {
+		display: block;
+		height: auto;
+	}
+	img {
+		display: block;
+		height: auto;
+		
+	}
+}
